# neloaica

./: .flake8  .gitignore  COMMANDS.md  NELOAICA.md  Neloaica.spec  README.md  build.bat  neloaica.db  neloaica.spec  pyproject.toml  requirements.txt  update-manifest.json
.github/workflows/: ci.yml  release.yml
exports/receipts/: Deviz_Coras_Carmen-Diana_20260205_155110.xlsx  Deviz_Coras_Carmen-Diana_20260205_155157.xlsx  Deviz_Coras_Eduard_20260205_151923.xlsx  Deviz_Coras_Eduard_20260205_153332.xlsx
scripts/: __init__.py  update_manifest.py  verify_tag_matches_version.py
src/: __init__.py  main.py  paths.py  utils.py
src/database/: __init__.py  connection.py
src/database/models/: __init__.py  cars.py  clients.py  defects.py  employees.py  labor.py  parts.py  receipts.py  settings.py
src/pages/: __init__.py  cars.py  clients.py  dashboard.py  defects.py  employees.py  labor.py  parts.py  settings.py
src/pages/receipts/: __init__.py  billable_parts_section.py  defects_section.py  estimates_section.py  labor_section.py  parts_section.py  receipt_form.py  receipt_info.py  receipts.py
src/services/: __init__.py  backup.py  excel_export.py  logging_setup.py
src/services/updater/: __init__.py  apply.py  check.py  download.py  (+3 more)
src/styles/: __init__.py  colors.py  theme_manager.py
src/widgets/: __init__.py  combo_box.py  update_widgets.py
templates/: Template-deviz.xlsx
tests/: README.md  conftest.py  test_main.py
tests/database/: __init__.py  conftest.py  test_cars_model.py  test_clients_model.py  test_connection.py  test_defects_model.py  test_employees_model.py  test_labor_model.py  test_parts_model.py  test_receipts_model.py  test_settings_model.py
tests/db/: conftest.py  test_employees_model.py  test_parts_model.py  test_receipts_model.py
tests/excel/: test_export.py  test_layout_invariants.py
tests/services/: test_backup.py  test_logging_setup.py
tests/ui/: test_main_window.py  test_receipt_duplicate_guard.py  test_receipt_form.py  test_section_inline_add_duplicate.py  test_theme.py  test_utils.py  test_widgets.py
tests/unit/: test_main_bootstrap.py  test_paths.py  test_pyinstaller_spec.py  test_release_workflow.py  test_spec_smoke.py  test_update_manifest_file.py  test_update_manifest_script.py  test_verify_tag_script.py  test_version.py
tests/widgets/: test_update_widgets.py
(+30 files in other folders)
