[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neloaica"
dynamic = ["version"]
description = "A PySide6 desktop application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Neloaica Project", email = "31226875+eduard2276@users.noreply.github.com"}
]
dependencies = [
    # PySide6 6.11.x ships a regression that segfaults QMessageBox in
    # offscreen mode (used by CI), so we cap to <6.11 until upstream fix.
    "PySide6>=6.6.0,<6.11",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    # Used by tests that parse `.github/workflows/*.yml` to assert on the
    # release pipeline structure. Keep optional / dev-only — runtime code
    # never reads YAML.
    "PyYAML>=6.0",
]

[project.scripts]
neloaica = "src.main:main"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
